# aoc

./: .env.example  .gitignore  README.md  devbox.json  main.py  pyproject.toml  requirements.txt
2023/day01/: soln2.py
2023/day02/: soln1.py  soln2.py
2023/day04/: soln2.py
2024/day01/: soln.py
2024/day02/: soln.py
2024/day30/: soln.py
lib/: aoc.py  template.go  template.py
solns/2023/day01/: soln1.py
solns/2023/day03/: soln1.py  soln2.py
solns/2023/day04/: soln1.py  soln2.py
solns/2024/day03/: soln.py
solns/2024/day04/: soln.py
solns/2024/day05/: soln.py
solns/2024/day06/: soln.py
solns/2025/day01/: soln.py
