[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argcomplete==3.1.6",
    "black==24.10.0",
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "idna==3.6",
    "mypy-extensions==1.0.0",
    "packaging==23.2",
    "pathspec==0.12.1",
    "pipx==1.2.1",
    "platformdirs==4.3.6",
    "python-dotenv==1.0.0",
    "pytz>=2025.2",
    "requests==2.31.0",
    "urllib3==2.1.0",
    "userpath==1.9.1",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
]
